<resources>
    <string name="app_name">Hablum minannas</string>

    <string name="pembukaan">“Hak seorang Muslim atas Muslim lainnya ada enam: (1) Jika engkau bertemu dengannya, maka ucapkan salam, dan (2) jika dia mengundangmu maka datangilah, (3) jika dia minta nasihat kepadamu berilah nasihat, (4) jika dia bersin dan mengucapkan hamdalah maka balaslah (dengan doa: Yarhamukallah), (5) jika dia sakit maka kunjungilah, dan (6) jika dia meninggal maka antarkanlah (jenazahnya ke kuburan).“ (HR. Muslim).</string>
    <string name="penutup1">Selain keenam hak dan kewajiban di atas, masih banyak hak muslim atas saudaranya sesama Muslim. Akan tetapi kita dapat menyimpulkan semua itu dalam sebuah hadits Rasulullah Saw: “Seorang muslim adalah saudara bagi muslim yang lainnya“.</string>
    <string name="penutup2">Jika seseorang mewujudkan sikap ukhuwwah terhadap saudaranya, maka dia akan berusaha untuk mendatangkan kebaikan kepada semua saudaranya serta menghindar dari semua perbuatan yang menyakitkannya. Itulah indahnya Islam dan mengesankannya kaum Muslim. Wallahu a’lam bish-shawab.</string>

    <string name="mengucapsalam1">“Demi Allah tidak akan masuk surga hingga kalian beriman dan tidak beriman hingga kalian saling mencintai. Maukah kuberitahukan sesuatu yang jika kalian lakukan akan menumbuhkan rasa cinta di antara kalian?, Sebarkan salam di antara kalian.“ (HR. Muslim).</string>
    <string name="mengucapsalam2">Rasulullah Saw selalu memulai salam kepada siapa saja yang beliau temui dan bahkan dia memberi salam kepada anak-anak jika menemui mereka. Sunnahnya adalah yang kecil memberi salam kepada yang besar, yang sedikit memberi salam kepada yang banyak, yang berkendaraan memberi salam kepada pejalan kaki, akan tetapi jika yang lebih utama tidak juga memberikan salam maka yang lainlah yang hendaknya memberikan salam agar sunnah tersebut tidak hilang. Jika yang kecil tidak memberi salam, maka yang besar memberikan salam, jika yang sedikit tidak memberi salam, maka yang banyak memberi salam agar pahalanya tetap dapat diraih.</string>
    <string name="mengucapsalam3">Ammar bin Yasir r.a. berkata, “Ada tiga hal yang jika ketiganya diraih maka sempurnalah iman seseorang: Jujur (dalam menilai) dirinya, memberi salam kepada khalayak dan berinfaq saat kesulitan“. (HR. Muslim).</string>
    <string name="mengucapsalam4">Jika memulai salam hukumnya sunnah maka menjawabnya adalah fardhu kifayah, jika sebagian melakukannya maka yang lain gugur kewajibannya. Misalnya jika seseorang memberi salam atas sejumlah orang maka yang menjawabnya hanya seorang maka yang lain gugur kewajibannya.</string>
    <string name="mengucapsalam5">Allah Ta’ala berfirman: “Apabila kamu dihormati dengan sesuatu penghormatan, maka balaslah penghormatan itu dengan yang lebih baik, atau balalaslah dengan yang serupa“ (QS. An-Nisa: 86).</string>
    <string name="mengucapsalam6">Tidak cukup menjawab salam dengan mengucapkan: “Ahlan Wasahlan“ saja, karena dia bukan termasuk “yang lebih baik darinya”, maka jika seseorang berkata: “Assalamualaikum”, maka jawablah: “Wa’alaikumus salam”, jika dia berkata : “Ahlan”, maka jawablah : “Ahlan” juga, dan jika dia menambah ucapan selamatnya maka itu lebih utama.</string>

    <string name="undangan1">Misalnya seseorang mengundangmu untuk makan-makan atau lainnya maka penuhilah dan memenuhi undangan adalah sunnah mu’akkadah dan hal itu dapat menarik hati orang yang mengundang serta mendatangkan rasa cinta dan kasih sayang. Dikecualikan dari hal tersebut adalah undangan pernikahan, sebab memenuhi undangan pernikahan adalah wajib dengan syarat-syarat yang telah dikenal.</string>
    <string name="undangan2">“Dan siapa yang tidak memenuhi (undangannya) maka dia telah maksiat kepada Allah dan Rasul-Nya.“ (HR. Bukhori dan Muslim).</string>
    <string name="undangan3">Hadits “jika seseorang mengundangmu maka penuhilah” termasuk juga undangan untuk memberikan bantuan atau pertolongan. Karena engkau diperintahkan untuk menjawabnya, maka jika dia memohon kepadamu agar engkau menolongnya untuk membawa sesuatu misalnya atau membuang sesuatu, maka engkau diperintahkan untuk menolongnya.</string>

    <string name="nasihat1">Yaitu jika seseorang datang meminta nasihat kepadamu dalam suatu masalah maka nasihatilah karena hal itu termasuk agama sebagaimana hadits Rasulullah Saw:</string>
    <string name="nasihat2">“Agama adalah nasihat: Kepada Allah, Kitab-Nya, Rasul-Nya dan kepada para pemimpin kaum muslimin serta rakyat pada umumnya.“ (HR. Muslim).</string>
    <string name="nasihat3">Jika seseorang datang kepadamu tidak untuk meminta nasihat, namun pada dirinya terdapat bahaya atau perbuatan dosa yang akan dilakukannya, maka wajib baginya untuk menasihatinya walaupun perbuatan tersebut tidak diarahkan kepadanya, karena hal tersebut termasuk menghilangkan bahaya dan kemunkaran dari kaum muslimin.</string>
    <string name="nasihat4">Jika tidak terdapat bahaya dalam dirinya dan tidak ada dosa padanya dan dia melihat bahwa hal lainnya (selain nasihat) lebih bermanfaat maka tidak perlu menasihatinya kecuali jika dia meminta nasihat kepadanya maka saat itu wajib baginya menasihatinya.</string>

    <string name="bersin1">Sebagai rasa syukur kepadanya yang memuji Allah saat bersin. Jika dia bersin tetapi tidak mengucapkan hamdalah, maka dia tidak berhak untuk diberikan ucapan tersebut, dan itulah balasan bagi orang yang bersin tetapi tidak mengucapkan hamdalah.</string>
    <string name="bersin2">Menjawab orang yang bersin (jika dia mengucapkan hamdalah) hukumnya wajib, dan wajib pula menjawab orang yang mengucapkan “Yarhamukallah” dengan ucapan “Yahdikumullah wa yuslih balakum”, dan jika seseorang bersin terus menerus lebih dari tiga kali maka keempat kalinya ucapkanlah “Aafakallah“ (Semoga Allah menyembuhkanmu) sebagai ganti dari ucapan “Yarhamukallah“.</string>

    <string name="sakit1">Hal ini merupakan hak orang sakit dan kewajiban saudara-saudaranya seiman, apalagi jika yang sakit memiliki kekerabatan, teman dan tetangga maka membesuknya sangat dianjurkan. Cara membesuk sangat tergantung orang yang sakit dan penyakitnya. Kadang kondisinya menuntut untuk sering dikunjungi, maka yang utama adalah memperhatikan keadaannya.</string>
    <string name="sakit2">Disunnahkan bagi yang membesuk orang sakit untuk menanyakan keadaannya, mendoakannya serta menghiburnya dan memberinya harapan karena hal tersebut merupakan sebab yang paling besar mendatangkan kesembuhan dan kesehatan. Layak juga untuk mengingatkannya akan taubat dengan cara yang tidak menakutkannya, misalnya seperti berkata kepadanya:</string>
    <string name="sakit3">“Sesungguhnya sakit yang engkau derita sekarang ini mendatangkan kebaikan, karena penyakit dapat berfungsi menghapus dosa dan kesalahan dan dengan kondisi yang tidak dapat kemana-mana engkau dapat meraih pahala yang banyak, dengan membaca zikir, istighfar dan berdoa”.</string>

    <string name="jenazah1">Hal ini juga merupakan hak seorang muslim atas saudaranya dan di dalamnya terdapat pahala yang besar.</string>
    <string name="jenazah2">“Siapa yang mengantarkan jenazah hingga menshalatkannya maka baginya pahala satu qhirath, dan siapa yang mengantarkannya hingga dimakamkan maka baginya pahala dua qhirath”, beliau ditanya: “Apakah yang dimaksud qhirath ?”, beliau menjawab: “Bagaikan dua gunung yang besar“ (HR. Bukhori dan Muslim).</string>
</resources>
