<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bambangsulistyo.hablumminannas.MengucapkanSalam">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp"
                android:text="Mengucapkan salam (Assalamu'alaikum = semoga Anda berada dalam keselamatan ) adalah sunnah yang sangat dianjurkan karena dia merupakan penyebab tumbuhnya rasa cinta dan dekat di kalangan kaum muslimin sebagaimana dapat disaksikan dan sebagaimana yang diajarkan oleh Rasulullah Saw:"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp"
                android:textStyle="italic"
                android:text="@string/mengucapsalam1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp"
                android:text="@string/mengucapsalam2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp"
                android:text="@string/mengucapsalam3"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp"
                android:text="@string/mengucapsalam4"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp"
                android:text="@string/mengucapsalam5"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp"
                android:text="@string/mengucapsalam6"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
